--- a/quickshell/translations/poexports/zh_TW.json
+++ b/quickshell/translations/poexports/zh_TW.json
@@ -1,6 +1,12 @@
 {
+  "%1 adapter(s), none connected": {
+    "%1 adapter(s), none connected": ""
+  },
   "%1 characters": {
     "%1 characters": "%1 個字元"
+  },
+  "%1 connected": {
+    "%1 connected": ""
   },
   "%1 display(s)": {
     "%1 display(s)": ""
@@ -50,6 +56,21 @@
   "Actions": {
     "Actions": "選項"
   },
+  "Activate": {
+    "Activate": ""
+  },
+  "Active": {
+    "Active": ""
+  },
+  "Active: ": {
+    "Active: ": ""
+  },
+  "Active: None": {
+    "Active: None": ""
+  },
+  "Adapters": {
+    "Adapters": ""
+  },
   "Add": {
     "Add": "新增"
   },
@@ -61,6 +82,9 @@
   },
   "Add Widget to ": {
     "Add Widget to ": "新增部件到 "
+  },
+  "Add Widget to %1 Section": {
+    "Add Widget to %1 Section": ""
   },
   "Add a VPN in NetworkManager": {
     "Add a VPN in NetworkManager": "新增VPN至網路管理器"
@@ -91,6 +115,9 @@
   },
   "Animation Speed": {
     "Animation Speed": "動畫速度"
+  },
+  "Anonymous Identity": {
+    "Anonymous Identity": ""
   },
   "Anonymous Identity (optional)": {
     "Anonymous Identity (optional)": "匿名身分 (可選)"
@@ -134,6 +161,9 @@
   "Are you sure you want to suspend the system?": {
     "Are you sure you want to suspend the system?": "你確定要暫停系統嗎?"
   },
+  "Audio": {
+    "Audio": ""
+  },
   "Audio Codec": {
     "Audio Codec": "音訊編解碼器"
   },
@@ -149,8 +179,17 @@
   "Audio Output Devices (": {
     "Audio Output Devices (": "音訊輸出設備 ("
   },
+  "Auth": {
+    "Auth": ""
+  },
+  "Auth Type": {
+    "Auth Type": ""
+  },
   "Authenticate": {
     "Authenticate": "驗證"
+  },
+  "Authentication": {
+    "Authentication": ""
   },
   "Authentication Required": {
     "Authentication Required": "需要驗證"
@@ -167,6 +206,9 @@
   "Authorize service for ": {
     "Authorize service for ": "授權服務 "
   },
+  "Auto": {
+    "Auto": ""
+  },
   "Auto Location": {
     "Auto Location": "自動定位"
   },
@@ -181,6 +223,9 @@
   },
   "Auto-saving...": {
     "Auto-saving...": "自動保存..."
+  },
+  "Autoconnect": {
+    "Autoconnect": ""
   },
   "Autoconnect disabled": {
     "Autoconnect disabled": "自動連線關閉"
@@ -224,14 +269,23 @@
   "Available Layouts": {
     "Available Layouts": "可用佈局"
   },
+  "Available Networks": {
+    "Available Networks": ""
+  },
   "Available Plugins": {
     "Available Plugins": "可用的插件"
   },
   "Available Screens (": {
     "Available Screens (": "可用的螢幕 ("
   },
+  "BSSID": {
+    "BSSID": ""
+  },
   "Back": {
     "Back": "返回"
+  },
+  "Backend": {
+    "Backend": ""
   },
   "Balanced palette with focused accents (default).": {
     "Balanced palette with focused accents (default).": "顏色平衡且帶有重點點綴的調色板 (預設)。"
@@ -250,6 +304,9 @@
   },
   "Bind lock screen to dbus signals from loginctl. Disable if using an external lock screen": {
     "Bind lock screen to dbus signals from loginctl. Disable if using an external lock screen": "將鎖定畫面綁定到 loginctl 的 dbus 訊號。如果使用外部鎖屏，請停用"
+  },
+  "Bluetooth": {
+    "Bluetooth": ""
   },
   "Bluetooth Icon": {
     "Bluetooth Icon": "藍芽圖示"
@@ -341,11 +398,17 @@
   "Center Tiling": {
     "Center Tiling": "居中平鋪"
   },
+  "Certificate Password": {
+    "Certificate Password": ""
+  },
   "Change bar appearance": {
     "Change bar appearance": ""
   },
   "Changes:": {
     "Changes:": "變更："
+  },
+  "Channel": {
+    "Channel": ""
   },
   "Check for system updates": {
     "Check for system updates": "檢查系統更新"
@@ -368,11 +431,17 @@
   "Choose the logo displayed on the launcher button in DankBar": {
     "Choose the logo displayed on the launcher button in DankBar": "選擇 DankBar 啟動器按鈕上顯示的 logo"
   },
+  "Choose the widget outline accent color": {
+    "Choose the widget outline accent color": ""
+  },
   "Choose where notification popups appear on screen": {
     "Choose where notification popups appear on screen": "選擇通知彈出視窗在螢幕上出現的位置"
   },
   "Choose where on-screen displays appear on screen": {
     "Choose where on-screen displays appear on screen": "選擇螢幕顯示出現在螢幕上的位置"
+  },
+  "Cipher": {
+    "Cipher": ""
   },
   "Clear": {
     "Clear": "清除"
@@ -382,6 +451,9 @@
   },
   "Clear All History?": {
     "Clear All History?": "清除所有紀錄?"
+  },
+  "Click Import to add a .ovpn or .conf": {
+    "Click Import to add a .ovpn or .conf": ""
   },
   "Clipboard History": {
     "Clipboard History": "剪貼簿歷史"
@@ -469,6 +541,9 @@
   },
   "Connect to Wi-Fi": {
     "Connect to Wi-Fi": "連線到 Wi-Fi"
+  },
+  "Connected": {
+    "Connected": ""
   },
   "Connected Displays": {
     "Connected Displays": "已連接的螢幕"
@@ -617,6 +692,12 @@
   "Del: Clear • Shift+Del: Clear All • 1-9: Actions • F10: Help • Esc: Close": {
     "Del: Clear • Shift+Del: Clear All • 1-9: Actions • F10: Help • Esc: Close": "Del: 清除 • Shift+Del: 清除所有 • 1-9: 動作 • F10: 幫助 • Esc: 關閉"
   },
+  "Delete": {
+    "Delete": ""
+  },
+  "Delete VPN": {
+    "Delete VPN": ""
+  },
   "Derives colors that closely match the underlying image.": {
     "Derives colors that closely match the underlying image.": "提取與底層圖像高度匹配的顏色。"
   },
@@ -640,6 +721,9 @@
   },
   "Disconnect": {
     "Disconnect": "斷開連線"
+  },
+  "Disconnected": {
+    "Disconnected": ""
   },
   "Disconnected from WiFi": {
     "Disconnected from WiFi": "已中斷 WiFi 連線"
@@ -673,6 +757,9 @@
   },
   "Display currently focused application title": {
     "Display currently focused application title": "顯示目前焦點應用程式的標題"
+  },
+  "Display only workspaces that contain windows": {
+    "Display only workspaces that contain windows": ""
   },
   "Display power menu actions in a grid instead of a list": {
     "Display power menu actions in a grid instead of a list": "以網格而非列表顯示電源選單操作"
@@ -715,6 +802,9 @@
   },
   "Drag widgets to reorder within sections. Use the eye icon to hide/show widgets (maintains spacing), or X to remove them completely.": {
     "Drag widgets to reorder within sections. Use the eye icon to hide/show widgets (maintains spacing), or X to remove them completely.": "拖曳部件即可在版塊內重新排序。使用眼睛圖示隱藏/顯示部件 (會保持間距)，或使用 X 將其完全移除。"
+  },
+  "Driver": {
+    "Driver": ""
   },
   "Duplicate Wallpaper with Blur": {
     "Duplicate Wallpaper with Blur": "模糊化重複桌布"
@@ -800,8 +890,14 @@
   "Enter this passkey on ": {
     "Enter this passkey on ": ""
   },
+  "Enterprise": {
+    "Enterprise": ""
+  },
   "Error": {
     "Error": "錯誤"
+  },
+  "Ethernet": {
+    "Ethernet": ""
   },
   "Exclusive Zone Offset": {
     "Exclusive Zone Offset": "獨佔區域偏移"
@@ -811,6 +907,12 @@
   },
   "F1/I: Toggle • F10: Help": {
     "F1/I: Toggle • F10: Help": "F1/I: 切換 • F10: 幫助"
+  },
+  "Fade grace period": {
+    "Fade grace period": ""
+  },
+  "Fade to lock screen": {
+    "Fade to lock screen": ""
   },
   "Failed to activate configuration": {
     "Failed to activate configuration": "無法啟動配置"
@@ -827,6 +929,9 @@
   "Failed to connect to ": {
     "Failed to connect to ": "無法連線到 "
   },
+  "Failed to delete VPN": {
+    "Failed to delete VPN": ""
+  },
   "Failed to disconnect VPN": {
     "Failed to disconnect VPN": "無法斷開 VPN"
   },
@@ -838,6 +943,12 @@
   },
   "Failed to enable WiFi": {
     "Failed to enable WiFi": "無法啟用 WiFi"
+  },
+  "Failed to import VPN": {
+    "Failed to import VPN": ""
+  },
+  "Failed to load VPN config": {
+    "Failed to load VPN config": ""
   },
   "Failed to pause printer": {
     "Failed to pause printer": "無法暫停印表機"
@@ -856,6 +967,9 @@
   },
   "Failed to start connection to ": {
     "Failed to start connection to ": "無法啟動連線到 "
+  },
+  "Failed to update VPN": {
+    "Failed to update VPN": ""
   },
   "Failed to update autoconnect": {
     "Failed to update autoconnect": "自動連線更新失敗"
@@ -899,6 +1013,9 @@
   "Force terminal applications to always use dark color schemes": {
     "Force terminal applications to always use dark color schemes": "強制終端應用程式始終使用深色配色方案"
   },
+  "Forget": {
+    "Forget": ""
+  },
   "Forget Device": {
     "Forget Device": "忘記設備"
   },
@@ -910,6 +1027,9 @@
   },
   "Format Legend": {
     "Format Legend": "格式說明"
+  },
+  "Frequency": {
+    "Frequency": ""
   },
   "Fun": {
     "Fun": "有趣的"
@@ -943,6 +1063,9 @@
   },
   "Goth Corners": {
     "Goth Corners": "圓角介面融合"
+  },
+  "Gradually fade the screen before locking with a configurable grace period": {
+    "Gradually fade the screen before locking with a configurable grace period": ""
   },
   "Graphics": {
     "Graphics": "圖形"
@@ -986,6 +1109,18 @@
   "High-fidelity palette that preserves source hues.": {
     "High-fidelity palette that preserves source hues.": "保留來源色調的高保真調色板。"
   },
+  "Hold Duration": {
+    "Hold Duration": ""
+  },
+  "Hold longer to confirm": {
+    "Hold longer to confirm": ""
+  },
+  "Hold to Confirm Power Actions": {
+    "Hold to Confirm Power Actions": ""
+  },
+  "Hold to confirm (%1s)": {
+    "Hold to confirm (%1s)": ""
+  },
   "Hour": {
     "Hour": "小時"
   },
@@ -997,6 +1132,12 @@
   },
   "I Understand": {
     "I Understand": "我了解"
+  },
+  "IP": {
+    "IP": ""
+  },
+  "IP Address:": {
+    "IP Address:": ""
   },
   "Icon Size": {
     "Icon Size": "圖示大小"
@@ -1022,6 +1163,12 @@
   "Image": {
     "Image": "圖片"
   },
+  "Import": {
+    "Import": ""
+  },
+  "Import VPN": {
+    "Import VPN": ""
+  },
   "Include Transitions": {
     "Include Transitions": "包括過渡"
   },
@@ -1045,6 +1192,9 @@
   },
   "Install plugins from the DMS plugin registry": {
     "Install plugins from the DMS plugin registry": "從 DMS 插件註冊表安裝插件"
+  },
+  "Interface:": {
+    "Interface:": ""
   },
   "Interlock Open": {
     "Interlock Open": "聯鎖開啟"
@@ -1133,6 +1283,9 @@
   "Loading plugins...": {
     "Loading plugins...": "讀取插件..."
   },
+  "Loading...": {
+    "Loading...": ""
+  },
   "Location Search": {
     "Location Search": "位置搜尋"
   },
@@ -1159,6 +1312,12 @@
   },
   "Low Priority": {
     "Low Priority": "低優先級"
+  },
+  "MAC": {
+    "MAC": ""
+  },
+  "MTU": {
+    "MTU": ""
   },
   "Manage and configure plugins for extending DMS functionality": {
     "Manage and configure plugins for extending DMS functionality": "管理和配置用於擴展 DMS 功能的插件"
@@ -1256,6 +1415,9 @@
   "Minute": {
     "Minute": "分鐘"
   },
+  "Mode": {
+    "Mode": ""
+  },
   "Mode:": {
     "Mode:": "模式:"
   },
@@ -1316,6 +1478,9 @@
   "Network Speed Monitor": {
     "Network Speed Monitor": "網速監視"
   },
+  "Network Status": {
+    "Network Status": ""
+  },
   "Network download and upload speed display": {
     "Network download and upload speed display": "顯示網路下載跟上傳速度"
   },
@@ -1334,6 +1499,9 @@
   "Night Temperature": {
     "Night Temperature": "夜間色溫"
   },
+  "No": {
+    "No": ""
+  },
   "No Active Players": {
     "No Active Players": "無播放器"
   },
@@ -1346,11 +1514,17 @@
   "No Media": {
     "No Media": "無媒體"
   },
+  "No VPN profiles": {
+    "No VPN profiles": ""
+  },
   "No VPN profiles found": {
     "No VPN profiles found": "未找到 VPN 設定檔"
   },
   "No Weather Data Available": {
     "No Weather Data Available": "沒有氣象數據"
+  },
+  "No adapters": {
+    "No adapters": ""
   },
   "No clipboard entries found": {
     "No clipboard entries found": "剪貼簿無內容"
@@ -1378,6 +1552,9 @@
   },
   "Normal Priority": {
     "Normal Priority": "普通優先級"
+  },
+  "Not connected": {
+    "Not connected": ""
   },
   "Notepad": {
     "Notepad": "筆記本"
@@ -1454,6 +1631,15 @@
   "Other": {
     "Other": "其他"
   },
+  "Outline Color": {
+    "Outline Color": ""
+  },
+  "Outline Opacity": {
+    "Outline Opacity": ""
+  },
+  "Outline Thickness": {
+    "Outline Thickness": ""
+  },
   "Output Area Almost Full": {
     "Output Area Almost Full": "輸出區域即將滿載"
   },
@@ -1466,8 +1652,14 @@
   "Overview": {
     "Overview": "概覽"
   },
+  "Overview of your network connections": {
+    "Overview of your network connections": ""
+  },
   "Overwrite": {
     "Overwrite": "覆寫"
+  },
+  "PIN": {
+    "PIN": ""
   },
   "Padding": {
     "Padding": "內距"
@@ -1532,6 +1724,9 @@
   "Play sounds for system events": {
     "Play sounds for system events": "播放系統事件的音效"
   },
+  "Playback": {
+    "Playback": ""
+  },
   "Plugged In": {
     "Plugged In": "已插入"
   },
@@ -1583,6 +1778,9 @@
   "Power Profile OSD": {
     "Power Profile OSD": "電源設定檔 OSD"
   },
+  "Preference": {
+    "Preference": ""
+  },
   "Pressure": {
     "Pressure": "氣壓"
   },
@@ -1598,6 +1796,9 @@
   "Print Server not available": {
     "Print Server not available": "列印伺服器無法使用"
   },
+  "Printer": {
+    "Printer": ""
+  },
   "Printers": {
     "Printers": "印表機"
   },
@@ -1606,6 +1807,9 @@
   },
   "Privacy Indicator": {
     "Privacy Indicator": "隱私指示器"
+  },
+  "Private Key Password": {
+    "Private Key Password": ""
   },
   "Process": {
     "Process": "程序"
@@ -1618,6 +1822,9 @@
   },
   "Profile image is too large. Please use a smaller image.": {
     "Profile image is too large. Please use a smaller image.": "個人資料圖片太大。請使用較小的圖片。"
+  },
+  "Protocol": {
+    "Protocol": ""
   },
   "Quick access to application launcher": {
     "Quick access to application launcher": "快速存取應用程式啟動器"
@@ -1636,6 +1843,9 @@
   },
   "Rain Chance": {
     "Rain Chance": "降雨機率"
+  },
+  "Rate": {
+    "Rate": ""
   },
   "Reason": {
     "Reason": "原因"
@@ -1663,6 +1873,9 @@
   },
   "Request confirmation on power off, restart, suspend, hibernate and logout actions": {
     "Request confirmation on power off, restart, suspend, hibernate and logout actions": "請求確認關機、重新啟動、暫停、休眠和登出操作"
+  },
+  "Require holding button/key to confirm power off, restart, suspend, hibernate and logout": {
+    "Require holding button/key to confirm power off, restart, suspend, hibernate and logout": ""
   },
   "Requires DWL compositor": {
     "Requires DWL compositor": "需要 DWL 混成器"
@@ -1727,6 +1940,9 @@
   "Saved": {
     "Saved": "已儲存"
   },
+  "Saved Configurations": {
+    "Saved Configurations": ""
+  },
   "Scale DankBar font sizes independently": {
     "Scale DankBar font sizes independently": "獨立縮放 DankBar 字體大小"
   },
@@ -1735,6 +1951,9 @@
   },
   "Scan": {
     "Scan": "掃描"
+  },
+  "Scanning...": {
+    "Scanning...": ""
   },
   "Science": {
     "Science": "科學"
@@ -1757,11 +1976,20 @@
   "Search plugins...": {
     "Search plugins...": "搜尋插件..."
   },
+  "Search widgets...": {
+    "Search widgets...": ""
+  },
   "Search...": {
     "Search...": "搜尋..."
   },
   "Searching...": {
     "Searching...": "搜尋中..."
+  },
+  "Secured": {
+    "Secured": ""
+  },
+  "Security": {
+    "Security": ""
   },
   "Select Launcher Logo": {
     "Select Launcher Logo": "選擇啟動器 Logo"
@@ -1774,6 +2002,9 @@
   },
   "Select a widget to add to the ": {
     "Select a widget to add to the ": "選擇一個部件加到 "
+  },
+  "Select a widget to add. You can add multiple instances of the same widget if needed.": {
+    "Select a widget to add. You can add multiple instances of the same widget if needed.": ""
   },
   "Select an image file...": {
     "Select an image file...": "選擇一張圖片..."
@@ -1804,6 +2035,9 @@
   },
   "Separator": {
     "Separator": "分隔符"
+  },
+  "Server": {
+    "Server": ""
   },
   "Set different wallpapers for each connected monitor": {
     "Set different wallpapers for each connected monitor": "為每個連接的螢幕設定不同的桌布"
@@ -1837,6 +2071,9 @@
   },
   "Show Log Out": {
     "Show Log Out": "顯示登出"
+  },
+  "Show Occupied Workspaces Only": {
+    "Show Occupied Workspaces Only": ""
   },
   "Show Power Actions": {
     "Show Power Actions": "顯示電源選項"
@@ -1931,6 +2168,12 @@
   "Shutdown": {
     "Shutdown": "關機"
   },
+  "Signal": {
+    "Signal": ""
+  },
+  "Signal:": {
+    "Signal:": ""
+  },
   "Size": {
     "Size": "大小"
   },
@@ -1949,6 +2192,9 @@
   "Spacing": {
     "Spacing": "間距"
   },
+  "Speed": {
+    "Speed": ""
+  },
   "Spool Area Full": {
     "Spool Area Full": "緩衝區已滿"
   },
@@ -1960,6 +2206,9 @@
   },
   "Start typing your notes here...": {
     "Start typing your notes here...": "從這裡開始輸入您的筆記..."
+  },
+  "State": {
+    "State": ""
   },
   "Status": {
     "Status": "狀態"
@@ -2111,6 +2360,9 @@
   "Toggle visibility of this bar configuration": {
     "Toggle visibility of this bar configuration": ""
   },
+  "Toggling...": {
+    "Toggling...": ""
+  },
   "Tomorrow": {
     "Tomorrow": "明天"
   },
@@ -2135,8 +2387,14 @@
   "Turn off monitors after": {
     "Turn off monitors after": "關閉螢幕之後"
   },
+  "Unavailable": {
+    "Unavailable": ""
+  },
   "Uninstall Plugin": {
     "Uninstall Plugin": "解除安裝插件"
+  },
+  "Unknown": {
+    "Unknown": ""
   },
   "Unpin from Dock": {
     "Unpin from Dock": "取消 Dock 釘選"
@@ -2225,6 +2483,18 @@
   "VPN Connections": {
     "VPN Connections": "VPN 連線"
   },
+  "VPN Password": {
+    "VPN Password": ""
+  },
+  "VPN configuration updated": {
+    "VPN configuration updated": ""
+  },
+  "VPN deleted": {
+    "VPN deleted": ""
+  },
+  "VPN imported: ": {
+    "VPN imported: ": ""
+  },
   "VPN status and quick connect": {
     "VPN status and quick connect": "VPN 狀態和快速連線"
   },
@@ -2264,6 +2534,9 @@
   "Volume, brightness, and other system OSDs": {
     "Volume, brightness, and other system OSDs": "音量、亮度及其他系統OSD"
   },
+  "WPA/WPA2": {
+    "WPA/WPA2": ""
+  },
   "Wallpaper": {
     "Wallpaper": "桌布"
   },
@@ -2291,6 +2564,15 @@
   "When enabled, apps are sorted alphabetically. When disabled, apps are sorted by usage frequency.": {
     "When enabled, apps are sorted alphabetically. When disabled, apps are sorted by usage frequency.": "啟用後，應用程式將按字母順序排序。禁用後，應用程式將按使用頻率排序。"
   },
+  "Wi-Fi Password": {
+    "Wi-Fi Password": ""
+  },
+  "WiFi": {
+    "WiFi": ""
+  },
+  "WiFi Device": {
+    "WiFi Device": ""
+  },
   "WiFi disabled": {
     "WiFi disabled": "關閉 WiFi"
   },
@@ -2305,6 +2587,9 @@
   },
   "Widget Management": {
     "Widget Management": "部件管理"
+  },
+  "Widget Outline": {
+    "Widget Outline": ""
   },
   "Widget Style": {
     "Widget Style": ""
@@ -2335,6 +2620,9 @@
   },
   "Workspace Switcher": {
     "Workspace Switcher": "工作區切換器"
+  },
+  "Yes": {
+    "Yes": ""
   },
   "You have unsaved changes. Save before closing this tab?": {
     "You have unsaved changes. Save before closing this tab?": "您有未儲存的變更。是否要儲存？"
